--- a/pages/comment/comment.wxml
+++ b/pages/comment/comment.wxml
@@ -6,4 +6,11 @@
   </view>
 
   <view class="comment-title">全部影评({{total}})</view>
+
+  <onecomment wx:for="{{comments}}" item="{{item}}" wx:key="item.id"></onecomment>
+
+  <view class="page-btn-group">
+    <view class="page-btn"bindtap="onPrePageTap" disabled="{{start <= 1}}" loading="{{perLoading}}">上一页</view>
+    <view class="page-btn" bindtap="onNextPageTap" loading="{{nextLoading}}">下一页</view>
+  </view>
 </view>
