--- a/pages/comment/comment.wxss
+++ b/pages/comment/comment.wxss
@@ -28,3 +28,26 @@
   margin-top: 60rpx;
   font-size: 40rpx;
 }
+
+.page-btn-group{
+  margin-top: 40rpx;
+  margin-bottom: 40rpx;
+  display: flex;
+  justify-content: flex-start;
+  align-content: center;
+}
+
+.page-btn{
+  flex: 1;
+  height: 60rpx;
+  color: #898989;
+  background-color: #fefefe;
+  border-radius: 10rpx;
+  border: 1px #aaa solid;
+  line-height: 60rpx;
+  text-align: center;
+}
+
+.page-btn:last-child{
+  margin-left: 10rpx;
+}
