--- a/pages/search/search.wxss
+++ b/pages/search/search.wxss
@@ -1,1 +1,31 @@
-/* pages/logs/logs.wxss */
+.item-list-group{
+  padding: 10rpx 20rpx;
+}
+
+.item-list-group .item-group{
+  padding: 10rpx 0;
+  display: flex;
+  border-bottom: 1px solid #e4e4e4;
+}
+
+.item-group .thumbnail{
+  width: 80rpx;
+  height: 100rpx;
+  margin-right: 20rpx;
+}
+
+.item-group .info-group{
+  flex:1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.info-group .title{
+  font-size: 32rpx;
+}
+
+.info-group .rate-year{
+  font-size: 28rpx;
+  color: #7b7b7b;
+}
